Bug 478958 - Touchscreen: Long pressing on the desktop doesn't enter the edit mode
Summary: Touchscreen: Long pressing on the desktop doesn't enter the edit mode
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-12-24 01:35 UTC by Fushan Wen
Modified: 2024-01-11 16:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2023-12-24 01:35:30 UTC
SUMMARY
In Plasma 5 to enter the edit mode on a tablet one can long press on the desktop. However, in Plasma 6 the feature is broken.


STEPS TO REPRODUCE
1. Long press on the desktop using a touchsreen
2. 
3. 

OBSERVED RESULT
Nothing happens

EXPECTED RESULT
Enter edit mode

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 6.0 Beta 2
KDE Frameworks Version: 
Qt Version: 6.6.1

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-01-02 12:55:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3738
Comment 2 Fushan Wen 2024-01-02 15:00:33 UTC
Git commit b8bf8448cca0560ca4c4230e251713d50c0af4a3 by Fushan Wen.
Committed on 02/01/2024 at 15:36.
Pushed by fusionfuture into branch 'master'.

containments/desktop: set GridView as eventManagerToFilter

The GridView contains mouse events and can be forwarded to
AppletsLayout.
FIXED-IN: 6.0

M  +1    -1    containments/desktop/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/b8bf8448cca0560ca4c4230e251713d50c0af4a3
Comment 3 Bug Janitor Service 2024-01-05 01:22:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1957
Comment 4 Fushan Wen 2024-01-05 01:38:43 UTC
Git commit aec90af31cdcbd8281f436b8021b5a35f68bbc2f by Fushan Wen.
Committed on 05/01/2024 at 02:30.
Pushed by fusionfuture into branch 'master'.

appiumtests: move tests for bug477220 and bug478958 to new file

The two tests are not stable in the CI environment, so don't let them
affect desktoptest.
Related: bug 477220

M  +5    -1    appiumtests/CMakeLists.txt
A  +115  -0    appiumtests/bug477220.py
M  +1    -55   appiumtests/desktoptest.py

https://invent.kde.org/plasma/plasma-desktop/-/commit/aec90af31cdcbd8281f436b8021b5a35f68bbc2f
Comment 5 Marco Martin 2024-01-11 16:55:25 UTC
Git commit e8e97b9c03ced377ab4569098de40ffe232dedb5 by Marco Martin, on behalf of Fushan Wen.
Committed on 11/01/2024 at 14:07.
Pushed by fusionfuture into branch 'master'.

AppletsLayout: enable touch event handling

This moves the touch event handling code from mouseXEvent to
touchEvent/touchUngrabEvent, which simplifies the logic.
FIXED-IN: 6.0

M  +77   -71   components/containmentlayoutmanager/appletslayout.cpp
M  +8    -4    components/containmentlayoutmanager/appletslayout.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/e8e97b9c03ced377ab4569098de40ffe232dedb5