AppletsLayout: enable touch event handling

This moves the touch event handling code from mouseXEvent to
touchEvent/touchUngrabEvent, which simplifies the logic.

BUG: 478958
FIXED-IN: 6.0